New changes edit create and new product

--- a/ERPAnimalia/Views/Product/Index.cshtml
+++ b/ERPAnimalia/Views/Product/Index.cshtml
@@ -13,35 +13,69 @@
 <body>
     <div class="container">
         <table class="table table-striped">
-            @Html.DisplayNameFor(model => model.Name);
-            @Html.DisplayNameFor(model => model.Description);
-            @foreach (var item in Model)
-            {
+            <thead class="thead-inverse">
                 <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Name)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Description)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.quantity)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.kg)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.barCode)
-                    </td>
-                    <td>
-                        @Html.ActionLink("Edit", "Edit", new { id = item.IdProduct }) |
-                        @Html.ActionLink("Details", "Details", new { id = item.IdProduct }) |
-                        @Html.ActionLink("Delete", "Delete", new { id = item.IdProduct })
-                    </td>
-                </tr>
-            }
-        </table>
+                <th>
+                    @Html.DisplayNameFor(model => model.Codigo)
+                </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Name)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Description)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.quantity)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.kg)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.barCode)
+                    </th>
+</tr>
+</thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
 
+                    <tr>
+
+                        <th scope="row">
+                        
+                            @Html.DisplayFor(modelItem => item.Codigo)
+                        </th>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Name)
+                        </td>
+
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Description)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.quantity)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.kg)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.barCode)
+                        </td>
+                        <td>
+                            @Html.ActionLink("Edit", "Edit", new { id = item.IdProduct }) |
+                            @Html.ActionLink("Details", "Details", new { id = item.IdProduct }) |
+                            @Html.ActionLink("Delete", "Delete", new { id = item.IdProduct })
+                        </td>
+
+                    </tr>
+
+
+                }
+                
+            </tbody>
+            
+</table>
+        <button type="button" class="btn btn-primary" onclick="location.href='@Url.Action("Create", "Product")'">Agregar Producto</button>
         </div>
 </body>
 </html>
